# ObjectRenderer

./: .gitignore  CMakeLists.orig.txt  CMakeLists.txt  Dockerfile  Makefile  README.md  Renderer.cpp  Renderer.h  libOpenCL.so.1  logger.cpp  logger.h  main.cpp  test.cpp  test.h
cmake/: Dependencies.cmake  currentlyinstalled.txt
lib/embree2/: libtbb.so.2  libtbbmalloc.so.2
scenes/: base.cfg  base.scn
scenes/base/: base.cfg  base.ply  base.scn  m255.ply  m256.ply  m800.ply  plane.ply
scenes/base/environment/: lussan_street.env
scenes/base/environment/bowl/: bowl.ply  bowl.scn
scenes/base/environment/plane/: lussan_street.scn
scenes/base/materials/: aluminium  drywall  lino  marble  wood
scenes/environment/bowl/: blue-light.ply  bowl.ply  materials.mat  red-light.ply  scene.scn
scenes/environment/pillars/: ground.ply  platform.ply  platform_before.ply  platform_orig.ply  scene.scn
scenes/environment/table/: materials.mat  mesh-00000.ply  scene.scn
scenes/materials/: alu  matte-white  plastic-marble  plastic-red
scenes/models/: m255.ply  m256.ply  m800.ply
src/: Renderer.cpp  Renderer.h  boundply.c.patch  main.cpp  normalsply.c.patch  xformply.c.patch
